# model-check

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: checker.rs  explorer.rs  lib.rs  property.rs  state.rs  transition.rs
